# BarFlow-Manager

./: .gitignore  BarFlow Notebook.ipynb  LICENSE  README.md  apply_migration.py  build_installer.ps1  debug_schema.py  fix_icon.py  generate_sample_data.py  main.py  migrate_existing_project.py  pyproject.toml  start_barflow.bat  test_db_schema.py
barflow/: __init__.py  __main__.py  main.py
barflow/app_data/: barflow_history.db
barflow/data/: __init__.py  db_manager.py  py_sqlite_migrator.py  temporary_db_manager.py
barflow/migrations/: 001_create_tables.sql  003_update_transactions_schema.sql  004_fix_schema.sql  005_add_descrizione_column.sql  006_restructure_transactions_table.sql
barflow/resources/icons/: icon.ico.backup
barflow/ui/: __init__.py  analysis_utils.py  analysis_widget.py  historical_analysis_widget.py  history_management_widget.py  history_widget.py  import_widget.py  main_window.py  transactions_widget.py  welcome_widget.py
barflow/utils/: __init__.py  app_paths.py
historical_data/: barflow_history.db
installer/: build_installer.bat  build_installer.ps1  create_desktop_shortcut.ps1  post_install.ps1
output_data/: 2025-10-06_risultati_barflow.xlsx  risultati_barflow.xlsx
sample_data/: 2025_01_01_ordini_fornitori.xlsm  2025_01_01_transazioni_pos.xlsx  2025_02_01_ordini_fornitori.xlsm  2025_02_01_transazioni_pos.xlsx  2025_03_01_ordini_fornitori.xlsm  2025_03_01_transazioni_pos.xlsx  ordini_fornitori.xlsm  transazioni_pos.xlsx
src/: __init__.py
src/barflow_manager.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/database/: __init__.py  database_manager.py
src/parsers/: __init__.py  file_parser.py
src/reports/: __init__.py  report_generator.py
src/ui/: __init__.py  analysis_widget.py  dashboard_widget.py  database_manager.py  historical_analysis_widget.py  history_management_widget.py  history_widget.py  import_widget.py  main_window.py  reports_widget.py  settings_widget.py  transactions_widget.py  welcome_widget.py
src/utils/: __init__.py  common_utils.py
uninstaller/: uninstall_accountflow.bat  uninstall_accountflow.ps1
