[project]
name = "barflow-manager"
version = "1.0.0"
description = "BarFlow - Gestione Finanziaria per Bar"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Andrea Frattini", email = "andreafrattini20@gmail.com"}
]
dependencies = [
    "lxml>=4.9.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "plotly>=5.15.0",
    "pyside6>=6.5.0",
    "xlsxwriter>=3.1.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.2",
    "appdirs>=1.4.4",
    "briefcase>=0.3.17",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["barflow*"]
exclude = ["sample_data*", "output_data*", "historical_data*"]

[tool.uv]
package = true

# Configurazione Briefcase
[tool.briefcase]
project_name = "BarFlow"
bundle = "com.andreafrattini"
url = "https://github.com/andreafrattini/barflow"
version = "1.0.0"

[tool.briefcase.app.barflow]
formal_name = "BarFlow - Gestione Finanziaria"
description = "Applicazione desktop per la gestione finanziaria di bar e ristoranti"
long_description = """BarFlow è un'applicazione desktop completa per la gestione 
finanziaria di bar e ristoranti. Offre import dati, analisi, reportistica e 
gestione dello storico transazioni."""

sources = ["barflow"]
main_module = "barflow"
console_app = false
resources = ["resources"]

requires = [
    "pyside6>=6.5.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "plotly>=5.15.0",
    "matplotlib>=3.7.0",
    "xlsxwriter>=3.1.0",
    "appdirs>=1.4.4",
    "lxml>=4.9.0",
    "seaborn>=0.13.2",
]

# Configurazioni specifiche per Windows
[tool.briefcase.app.barflow.windows]
installer_type = "nsis"
icon = "resources/icons/icon.ico"

# Configurazioni specifiche per macOS  
[tool.briefcase.app.barflow.macOS]
bundle_identifier = "com.andreafrattini.barflow"
icon = "resources/icons/icon.icns"

# Configurazioni specifiche per Linux
[tool.briefcase.app.barflow.linux]
system_requires = []
icon = "resources/icons/icon.png"
