[project]
name = "AccountFlow-manager"
version = "1.0.0"
description = "AccountFlow - Gestione Finanziaria"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Andrea Frattini", email = "andreafrattini20@gmail.com"}
]
dependencies = [
    "lxml>=4.9.0",
    "openpyxl>=3.1.0",
    "pandas>=2.0.0",
    "plotly>=5.15.0",
    "pyside6>=6.5.0",
    "xlsxwriter>=3.1.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.2",
    "appdirs>=1.4.4",
    "briefcase>=0.3.17",
    "ipykernel>=6.29.5",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["barflow*"]
exclude = ["sample_data*", "output_data*", "historical_data*"]

[tool.uv]
package = true

# Configurazione Briefcase
[tool.briefcase]
project_name = "AccountFlow"
bundle = "com.andreafrattini"
url = "https://github.com/andreafrattini/barflow"
version = "1.0.0"
author = "Andrea Frattini"
author_email = "andreafrattini20@gmail.com"

[tool.briefcase.app.barflow]
formal_name = "AccountFlow - Gestione Finanziaria"
description = "Applicazione desktop per la gestione finanziaria di attività commerciali"
long_description = """AccountFlow è un'applicazione desktop completa per la gestione 
finanziaria di attività commerciali. Offre import dati, analisi, reportistica e 
gestione dello storico transazioni."""

sources = ["barflow"]
main_module = "barflow.main"
console_app = false
resources = ["barflow/resources"]

requires = [
    "pyside6>=6.5.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "plotly>=5.15.0",
    "matplotlib>=3.7.0",
    "xlsxwriter>=3.1.0",
    "appdirs>=1.4.4",
    "lxml>=4.9.0",
    "seaborn>=0.13.2",
]

# Configurazioni specifiche per Windows
[tool.briefcase.app.barflow.windows]
installer_type = "msi"
icon = "barflow/resources/icons/icon"
license = "LICENSE"
system_installer = true
sign_tool = false

[tool.briefcase.app.barflow.windows.msi]
uuid = "12345678-1234-5678-9ABC-123456789ABC"
upgrade_code = "87654321-4321-8765-CBA9-987654321ABC"
install_scope = "perMachine"

# Configurazioni specifiche per macOS  
[tool.briefcase.app.barflow.macOS]
bundle_identifier = "com.andreafrattini.accountflow"
icon = "barflow/resources/icons/icon.icns"

# Configurazioni specifiche per Linux
[tool.briefcase.app.barflow.linux]
system_requires = []
icon = "barflow/resources/icons/icon.png"
